# systemcore-blocks-interface

./: .eslintrc.json  .gitignore  LICENSE.md  README.md  agents.md  attribution.txt  config-overrides.js  index.html  licenseInfos.json  manifest.json  package-lock.json  package.json  push.py  tsconfig.app.json  tsconfig.json  tsconfig.node.json  updateSystemCore.sh  vite.config.mts  vite.config.ts
.claude/: CLAUDE.md
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/: pull_request_template.md
assets/: browser-ponyfill--b9a9JVA.js  browser-ponyfill-3Fcxd88t.js  browser-ponyfill-64R8tFsp.js  browser-ponyfill-8E1diWsQ.js  browser-ponyfill-B-DL7IUX.js  browser-ponyfill-B-xgE1gD.js  browser-ponyfill-B0ZANsnB.js  browser-ponyfill-B1DIe59P.js  browser-ponyfill-B3h4AVyU.js  browser-ponyfill-B8CGg-mQ.js  browser-ponyfill-B8FqkAtO.js  browser-ponyfill-BAhrfBEX.js  browser-ponyfill-BCs-e7kF.js  browser-ponyfill-BFOe-CIb.js  browser-ponyfill-BIvmRu_K.js  browser-ponyfill-BOF9K_zS.js  browser-ponyfill-BRifm6AY.js  browser-ponyfill-BSHuEO8e.js  browser-ponyfill-BSymS8bI.js  browser-ponyfill-BSzkoryV.js  browser-ponyfill-BVA_il1u.js  browser-ponyfill-BWC6wL-q.js  browser-ponyfill-BX6RyodV.js  browser-ponyfill-B_ECnO9M.js  browser-ponyfill-BaVkjsj7.js  browser-ponyfill-BaZ27MoK.js  browser-ponyfill-BdUXGV_I.js  browser-ponyfill-BfTSmjKk.js  browser-ponyfill-BfWS65rs.js  browser-ponyfill-BglsIuCz.js  browser-ponyfill-BiJ2g890.js  (+89 more)
server_python_scripts/blocks_base_classes/: __init__.py  decorators.py  mechanism.py  opmode.py  pyproject.toml  robot_base.py
(+372 files in other folders)
